# option-data-prep

./: .gitignore  Makefile  README.md  pyproject.toml
archive/: data_interpolation.py  data_pipeline_v1.py
configs/: dtypes.json
model/SPY/: columns.pkl  scaler.pkl
option_data_prep/: main.py  utils.py
src/: main.py
src/option_data_prep/: main.py
src/option_extraction/: main.py  utils.py
wandb/: latest-run
wandb/run-20240211_211745-gd0p3km0/: run-gd0p3km0.wandb
wandb/run-20240211_211745-gd0p3km0/files/: config.yaml  wandb-metadata.json
wandb/run-20240211_212516-uzwz1qpi/: run-uzwz1qpi.wandb
wandb/run-20240211_212516-uzwz1qpi/files/: config.yaml  requirements.txt  wandb-metadata.json
